# Copyright © 2022 Erik Steinbach eekkaiia@gmail.com
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either expressed or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name 					= "lakhesis"
version                 = "0.1.0"
edition                 = "2021"
resolver                = "2"
license                 = "Apache-2.0"
authors                 = ["Erik Steinbach <eekkaiia@gmail.com>"]
description             = """
                            A different take on abelian sandpile models
                          """
categories              = ["computer-modeling"]
keywords                = [
                            "abelian sandpile model",
                            "cellular automaton",
                            "self-organized criticality",
							"rust",
							"macroquad"
                          ]
homepage                = "https://github.com/eekkaiia/lakhesis"
repository              = "https://github.com/eekkaiia/lakhesis"
readme                  = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad				= "0.3.6"

# macroquad				= { version = "0.3.23", default-features = false }

[profile.dev.package.'*']
opt-level = 3